added impact section which includes how much the user has saved on and such + updated docs accordingly

--- a/docs.html
+++ b/docs.html
@@ -188,6 +188,21 @@
 
 </code></pre>
 
+<h2>Get User Impact</h2>
+<p><strong>Endpoint:</strong> <code>/EcoCycle/getUserImpact/<email></code></p>
+<p><strong>Method:</strong> GET</p>
+<p><strong>Sample Response:</strong></p>
+<pre><code>
+    {
+        "co2_savings_kg": 15.698,
+        "email": "mahinEvan@gmail.com",
+        "energy_savings_mj": 162.21,
+        "landfill_waste_saved_plates": 103,
+        "waste_saved_lbs": 5.768
+      }
+
+</code></pre>
+
 
 </body>
 </html>
