--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ def getQRCodeEco(email):
 
     <h2>USE</h2>
     <p>Now refer back to the front-end docs to see how to run the front-end!</p>
-    <p>Check the routes here to see what they do: <a href="docs.html">API ROUTES</a> </p>
+    <p>Check the routes here to see what they do : <a href="docs.html">API Documentation</a> </p>
 
 </body>
 </html>
