udpated documentation for signup

--- a/docs.html
+++ b/docs.html
@@ -36,6 +36,7 @@
     <p><strong>Endpoint:</strong> <code>/EcoCycle/signUp/&lt;firstName&gt;/&lt;lastName&gt;/&lt;userName&gt;/&lt;email&gt;/&lt;password&gt;/&lt;referallCode&gt;</code></p>
     <p><strong>Method:</strong> GET</p>
     <p><strong>Sample Response:</strong></p>
+    <p>If there is no referallCode than pass in a string called 'None'</p>
     <pre><code>{
   "message": "Sign up successful"
 }</code></pre>
