--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@ def getQRCodeEco(email):
     <p>Replace <code>yourSelectedHost</code> with your IPv4 address.</p>
 
     <h2>USE</h2>
-    <p>Now refer back to the front-end docs to see how to run the front-end!</p>
+    <p>Now refer back to the front-end docs to see how to run the front-end! Click here: <a href="runFrontend.html">RUN FRONTEND</a></p>
+    <li>Please note, our frontend is on ANOTHER branch , so on a different terminal open up the project and type in "git checkout main" (ON MAIN BRANCH) to get into the the branch or try another way of getting into that branch, than follow the documentation on the frontend (BOTH SHOULD BE RUNNING) </li>
     <p>Check the routes here to see what they do : <a href="docs.html">API Documentation</a> </p>
-
+    
 </body>
 </html>
