pushed more doc changes

--- a/docs.html
+++ b/docs.html
@@ -219,5 +219,8 @@
 }</code></pre>
 
 
+<p>Run server? Check this link!: <a href="index.html">Run Server</a></p>
+<p>Run frontend? Check this link!: <a href="runFrontend.html">Run Frontend</a></p>
+
 </body>
 </html>
