--- a/docs.html
+++ b/docs.html
@@ -112,10 +112,14 @@
     <p><strong>Method:</strong> GET</p>
     <p><strong>Sample Response:</strong></p>
     <pre><code>{
-  "Message": "Reward redeemed successfully",
-  "email": "mahinEvan@gmail.com",
-  "points": 800
-}</code></pre>
+      "Message": "Reward redeemed successfully",
+      "email": "emily.jones@outlook.com",
+      "firstName": "Emily",
+      "lastName": "Jones",
+      "point_previous": 1200,
+      "points_current": 1000,
+      "points_subtracted": 200
+    }</code></pre>
 
     <h2>Get Current Orders</h2>
     <p><strong>Endpoint:</strong> <code>/EcoCycle/getCurrentOrders</code></p>
